[package]
name = "mtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
directories = "3.0"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
