[package]
name = "mtt"
version = "0.1.0"
description = "A minimal time tracker written in Rust."
categories = ["command-line-utilitie"]
keywords = ["timer", "timetracker", "time-tracker", "time-keeper"]
repository = "https://github.com/markus-k/mtt"
license = "Apache-2.0"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1", features = ["derive"] }
directories = "3.0"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
